# DOSEV2

./: .gitignore
src/: info.txt
src/oakd_demo/: package.xml  setup.cfg  setup.py
src/oakd_demo/oakd_demo/: oakd_publisher.py  oakd_subscriber.py
src/serial_bridge/: package.xml  setup.py
src/serial_bridge/face_data/face_db/: rishik.npy  saran.npy  tejesh.npy
src/serial_bridge/serial_bridge/: serial_bridge_node.py
src/serial_bridge/test/: encodefaces.py  facedetection.py  facedetection_v2.py  teast_ak_aplriltag.py  test_oakdlite_v1.py
src/web_server/: package.xml  setup.py
src/web_server/web_server/: web_ros2_server.py
