<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oakd_demo</name>
  <version>0.0.1</version>
  <description>OAK-D Lite ROS2 Publisher and Subscriber</description>
  <maintainer email="ose@todo.todo">You</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
<export>
    <build_type>ament_python</build_type>
  </export>
</package>
